# MMatrix

./: .bazelrc  .clang-tidy  .clangd  .envrc  .gitignore  BUILD  GEMM_PERFORMANCE_ANALYSIS.md  LICENSE.txt  MODULE.bazel  NOTICE  README.md  TODO_tensor_backend_backlog.md  WORKSPACE  analyze_bench.py  bench_output.txt  bench_profile_output.txt  bench_profile_output_new.txt  deps.dot  graph.in  justfile  mkdocs.yml
.bgai-db 3/: 000224.sst  000225.sst  IDENTITY  LOG  MANIFEST-000214  OPTIONS-000212  OPTIONS-000216
.github/instructions/instructions/: API.md
.github/skills/api-return-conventions/: SKILL.md
.github/skills/sm-gemm-optimization/: SKILL.md
.github/workflows/: benchmark-macos.yml  ci.yml
_archiv/: BUILD  dm_create.c  dm_create_special.c  dm_math_blas.c  dm_math_mult.c  dm_math_rand.c  dm_math_vector.c  dm_modify.c  dm_modify_cleanup.c  dm_modify_insert.c  dm_print_pretty.c
_archiv/include/: dm_format.h  dm_math.h  dm_utils.h
_archiv/tests/: test_dm_create_special.c  test_dm_math.c  test_dm_math_linalg.c  test_dm_modify.c  test_dm_modify_cleanup.c  test_dm_modify_remove.c  test_dm_modify_reshape.c  test_dm_realloc.c
app/matrix/: BUILD
app/matrix/include/: dm.h  dms.h  m_convert.h  m_io.h  m_status.h  sm.h  sm_mps.h  st.h  st_batchnorm.h  st_conv.h
app/matrix/src/: dm.c  dms.c  m_convert.c  m_io.c  m_rng.c  m_rng.h  sm.c  sm_mps.h  sm_mps.m  st.c  st_batchnorm.c  st_conv.c  st_mps.h  st_mps.m  st_pool.c
app/matrix/tests/: my_config.yml  test_convert.c  test_dm.c  test_dms.c  test_io.c  test_sm.c  test_st.c  test_st_batchnorm.c  test_st_batchnorm_relu.c  test_st_conv.c  test_st_conv_backward.c  test_st_conv_backward_gemm.c  test_st_ops.c  test_st_pool.c
app/rmatrix/: BUILD  README.md
app/rmatrix/src/: ffi.rs  lib.rs
app/tensor/: BUILD  MPS_SYNC_ACTION_PLAN.md
app/tensor/docs/: mps-performance.md
app/tensor/include/: st.h  st_backend.h  st_batchnorm.h  st_bf16_utils.h  st_buffer.h  st_conv.h  st_convert.h  st_dtype.h  st_gpu_guard.h  st_pool.h  st_shape_ops.h  st_vector_bridge.h  st_workspace.h
app/tensor/src/: st.c  st_backend.c  st_backend_mps.m  st_batchnorm.c  st_bf16_utils.c  st_buffer.c  st_buffer_metal.h  st_buffer_metal.m  st_conv.c  st_gpu_guard.c  st_gpu_guard.h  st_mps.h  st_mps.m  st_pool.c  st_stream_mps.h  st_stream_mps.m
app/tensor/tests/: bench_st_ab_conv.c  bench_st_async_release.c  bench_st_batchnorm.c  bench_st_canonical.c  bench_st_conv_backward_gemm.c  bench_st_conv_medium_batch_profile.c  bench_st_conv_medium_profile.c  bench_st_layout.c  bench_st_nhwc_vs_nchw.c  bench_st_pipeline.c  bench_st_pool_diagnostic.c  bench_st_single_op.c  bench_st_transfer.c  bench_st_warmup.c  example_cnn_dense_pipeline.c  test_st.c  test_st_batchnorm.c  test_st_batchnorm_relu.c  test_st_buffer.c  test_st_conv.c  test_st_conv_backward.c  test_st_conv_backward_gemm.c  test_st_convert.c  test_st_dtype.c  test_st_gpu_guard.c  test_st_ops.c  test_st_pool.c  test_st_shape_ops.c  test_st_vector_bridge.c  test_st_workspace.c
app/vector/: BUILD
app/vector/include/: dv.h  dvs.h  sv.h  vec3.h  vector_bridge.h  vector_tensor_bridge.h  vv.h
app/vector/src/: dv.c  dvs.c  sv.c  vec3.c  vector_bridge.c  vector_tensor_bridge.c  vv.c
app/vector/tests/: bench_sv_dv.c  my_config.yml  test_dv.c  test_dvs.c  test_sv.c  test_vec3.c  test_vector_bridge.c  test_vv.c
benchmark/: README.md  bench_conv_cross_framework.py  requirements.txt  run_cross_framework.sh
coverage/mcdc_test_dms/: index.html  test_dms.profdata
data/: COO.txt  results_perf.txt
doc/: index.md  mkdocs.tpl.yaml  requirements.txt
doc/api/matrix/: dm.md  dms.md  m_convert.md  m_io.md  sm.md
doc/api/tensor/: st.md  st_batchnorm.md  st_conv.md  st_pool.md  st_shape_ops.md
doc/examples/: BUILD  tensor_basic.md  tensor_basic_example.c
examples/: BUILD  example.c  example_matrix.c  example_vector.c
examples/linear_algebra/: BUILD  vec_column.c  vec_math.c
lib/misc/: BUILD  example_misc.c  misc.c  misc.h  test_misc.c
share/: benchmark_result.txt  mps-performance.md
share/benchmark/: BUILD  benchmark_dm_get.cpp  benchmark_dm_multiply_blas.cpp
share/simple_benchmark/: BUILD  bench_sm_mps.c
src/: BUILD  armstrong_numbers.c  dm.c  dm_convert.c  dm_create.c  dm_create_special.c  dm_dense.c  dm_format_market.c  dm_get.c  dm_getset.c  dm_io.c  dm_manipulate.c  dm_math.c  dm_math_blas.c  dm_math_dense.c  dm_math_linalg.c  dm_math_mult.c  dm_math_rand.c  dm_math_sparse.c  dm_matrix.c  dm_modify.c  dm_modify_cleanup.c  dm_modify_insert.c  dm_modify_remove.c  dm_modify_reshape.c  dm_modify_resize.c  dm_plot.c  dm_print_pretty.c  dm_print_structure.c  dm_realloc.c  dm_set.c  dm_sparse.c  dm_special.c  dm_util.c  dm_utils.c  dm_vector.c  dms.c  dv_math.c  dv_vector.c  justfile  (+17 more)
src/include/: armstrong_numbers.h  dm.h  dm_convert.h  dm_format.h  dm_internals.h  dm_io.h  dm_math.h  dm_math_blas.h  dm_matrix.h  dm_modify.h  dm_plot.h  dm_utils.h  dms.h  dv_math.h  dv_vector.h  m_convert.h  m_io.h  matrix.h  nm.h  pprint2D.h  sm.h  sp_math.h  sp_matrix.h  utils.h  vector.h
tests/: BUILD  my_config.yml  test_DenseMatrix.c  test_DoubleMatrix.c  test_DoubleVector.c  test_HashtableMatrix 2.c  test_HashtableMatrix.c  test_SparseMatrix.c  test_armstrong_numbers.c  test_convert.c  test_dm.c  test_dm_create.c  test_dm_create_special.c  test_dm_format_market.c  test_dm_getset.c  test_dm_math.c  test_dm_math_linalg.c  test_dm_math_mult.c  test_dm_modify.c  test_dm_modify_cleanup.c  test_dm_modify_insert.c  test_dm_modify_remove.c  test_dm_modify_reshape.c  test_dm_modify_resize.c  test_dm_realloc.c  test_dms.c  test_dv_math.c  test_io.c  test_nm.c  test_sm.c
tests/test_data/: rand10.mat
tools/: BUILD  bench_conv_cross_framework.py  benchmarks_to_sqlite.py  coverage_lcov_wrapper.sh  host_local_library.bzl  install_library.bzl  matrix_build.bzl  refresh_compile_commands.sh  unity_test.bzl
tools/clang_doc/: BUILD  def.bzl  sync_docs.sh
tools/doxygen/: generate_api_docs.sh  generate_matrix_api_docs.sh  generate_tensor_api_docs.sh  xml_to_markdown.py
tools/install/: def.bzl
(+44 files in other folders)
